git fix nav-active overflow-x

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -136,6 +136,7 @@ nav{
 }
 .nav-active{
     transform: translateX(0px);
+    overflow-x: hidden;
 }
 .navlink a{
     text-decoration: none;
